variables.Variables.scala.error
Erreur de compilation :
Variables:8: error: '<-' expected but ';' found.
for(y;y<x;y++){
     ^Variables:8: error: '<-' expected but ';' found.
for(y;y<x;y++){
         ^Variables:8: error: illegal start of simple pattern
for(y;y<x;y++){
             ^Variables:13: error: illegal start of simple expression
	}
        ^